complete links hover like home and maga menu and sellers links okey

--- a/html/index.html
+++ b/html/index.html
@@ -676,17 +676,26 @@
                         <span>Home</span>
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"/></svg>
                     </a>
+                    <ul class="sub-categ" >
+                        <li><a href="">Kartshop</a></li>
+                        <li><a href="">Sweetshop</a></li>
+                        <li><a href="">Organic</a></li>
+                        <li><a href="">Supershop</a></li>
+                        <li><a href="">Classic shop</a></li>
+                        <li><a href="">Furniture</a></li>
+                        <li><a href="">Search Oriented</a></li>
+                        <li><a href="">Category Focus</a></li>
+                        <li><a href="">Fashion</a></li>
+                    </ul>
                 </li>
                 <li>
                     <a href="">
                         <span>Search Product</span>
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"/></svg>
                     </a>
                 </li>
                 <li>
                     <a href="">
                         <span>shop</span>
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"/></svg>
                     </a>
                 </li>
                 <li>
@@ -694,6 +703,35 @@
                         <span>Mega Menu</span>
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"/></svg>
                     </a>
+                    <div class="lists-veg">
+                        <ul class="l1">
+                            <h4>Daily Vegetables</h4>
+                            <li><a href="">Beans & Brinjals</a></li>
+                            <li><a href="">Chilies, Garlic</a></li>
+                            <li><a href="">Herbs & Sprouts</a></li>
+                            <li><a href="">Chilies, Garlic</a></li>
+                            <li><a href="">Beans & Brinjals</a></li>
+                            <li><a href="">Herbs & Sprouts</a></li>
+                            <li><a href="">Beans & Brinjals</a></li>
+                        </ul>
+                        <ul class="l2">
+                            <h4>Baby Tender</h4>
+                            <li><a href="">Beans & Brinjals</a></li>
+                            <li><a href="">Chilies, Garlic</a></li>
+                            <li><a href="">Herbs & Sprouts</a></li>
+                            <li><a href="">Chilies, Garlic</a></li>
+                            <li><a href="">Beans & Brinjals</a></li>
+                            <li><a href="">Herbs & Sprouts</a></li>
+                            <li><a href="">Beans & Brinjals</a></li>
+                        </ul>
+                        <ul class="l3">
+                            <h4>Exotic Vegetables</h4>
+                            <li><a href="">Beans & Brinjals</a></li>
+                            <li><a href="">Chilies, Garlic</a></li>
+                            <li><a href="">Herbs & Sprouts</a></li>
+                            <li><a href="">Chilies, Garlic</a></li>
+                        </ul>
+                    </div>
                 </li>
                 <li>
                     <a href="">
@@ -706,17 +744,21 @@
                         <span>seller</span>
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"/></svg>
                     </a>
+                    <ul class="sub-categ" >
+                        <li><a href="">Become a Seller</a></li>
+                        <li><a href="">Seller Dashboard</a></li>
+                        <li><a href="">seller detail</a></li>
+                        <li><a href="">seller grid</a></li>
+                    </ul>
                 </li>
                 <li>
                     <a href="">
                         <span>about us</span>
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"/></svg>
                     </a>
                 </li>
                 <li>
                     <a href="">
                         <span>contact us</span>
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"/></svg>
                     </a>
                 </li>
             </ul>
