--- a/html/index.html
+++ b/html/index.html
@@ -93,16 +93,16 @@
             <!-- controle box -->
             <div class="control-box">
                 <!-- search button  -->
-                <a href="">
+                <li href="">
                     <span>
                         <svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512">
                             <path d="M221.09 64a157.09 157.09 0 10157.09 157.09A157.1 157.1 0 00221.09 64z" fill="none" stroke="currentColor" stroke-miterlimit="10" stroke-width="32"></path>
                             <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-miterlimit="10" stroke-width="32" d="M338.29 338.29L448 448"></path>
                         </svg>
                     </span>
-                </a>
+                </li>
                 <!-- a delivery  -->
-                <a href="">
+                <li href="">
                     <span class="icon-phone">
                         <svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512"><path d="M451 374c-15.88-16-54.34-39.35-73-48.76-24.3-12.24-26.3-13.24-45.4.95-12.74 9.47-21.21 17.93-36.12 14.75s-47.31-21.11-75.68-49.39-47.34-61.62-50.53-76.48 5.41-23.23 14.79-36c13.22-18 12.22-21 .92-45.3-8.81-18.9-32.84-57-48.9-72.8C119.9 44 119.9 47 108.83 51.6A160.15 160.15 0 0083 65.37C67 76 58.12 84.83 51.91 98.1s-9 44.38 23.07 102.64 54.57 88.05 101.14 134.49S258.5 406.64 310.85 436c64.76 36.27 89.6 29.2 102.91 23s22.18-15 32.83-31a159.09 159.09 0 0013.8-25.8C465 391.17 468 391.17 451 374z" fill="none" stroke="currentColor" stroke-miterlimit="10" stroke-width="32"/></svg>
                     </span>
@@ -110,15 +110,15 @@
                         <span class="deliver">24/7 Delivery</span>
                         <span id="number">+91 888 104 2340</span>
                     </div>
-                </a>
+                </li>
                 <!-- likes  -->
-                <a href="">
+                <li href="">
                     <span>
                     <svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512"><path d="M352.92 80C288 80 256 144 256 144s-32-64-96.92-64c-52.76 0-94.54 44.14-95.08 96.81-1.1 109.33 86.73 187.08 183 252.42a16 16 0 0018 0c96.26-65.34 184.09-143.09 183-252.42-.54-52.67-42.32-96.81-95.08-96.81z" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32"/></svg>
                     </span>
-                </a>
+                </li>
                 <!-- buying  -->
-                <a href="">
+                <li href="">
                     <span><svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512">
                             <circle cx="176" cy="416" r="16" fill="none" stroke="currentColor" stroke-linecap="round"
                                 stroke-linejoin="round" stroke-width="32" />
@@ -131,9 +131,53 @@
                                 stroke-width="32" />
                         </svg></span>
                     <span id="nb-product">2</span>
-                </a>
+                    <div class="recent-products">
+                        <div class="products">
+                            <div class="box-product">
+                                <sapn id="rm-pr">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512"><title>Close</title><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" d="M368 368L144 144M368 144L144 368"></path></svg>
+                                </sapn>
+                                <a href="">
+                                    <div class="img">
+                                        <img src="/img/10028.png" alt="">
+                                    </div>
+                                    <div class="info">
+                                        <span class="descrp">Potato chips</span>
+                                        <span class="pricing">
+                                            <span id="qt">1</span>x $<span class="price">234</span>
+                                        </span>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="box-product">
+                                <sapn id="rm-pr">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512"><title>Close</title><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" d="M368 368L144 144M368 144L144 368"></path></svg>
+                                </sapn>
+                                <a href="">
+                                    <div class="img">
+                                        <img src="/img/10028.png" alt="">
+                                    </div>
+                                    <div class="info">
+                                        <span class="descrp">Potato chips</span>
+                                        <span class="pricing">
+                                            <span id="qt">1</span>x $<span class="price">234</span>
+                                        </span>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="price-pr">
+                            <span>Total :</span>
+                            <div>$<span id="tot-price">106.58</span></div>
+                        </div>
+                        <div class="buy-pr">
+                            <a href="">view cart</a>
+                            <a href="">checkout</a>
+                        </div>
+                    </div>
+                </li>
                 <!-- account  -->
-                <a href="">
+                <li href="">
                     <span><svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512">
                             <path d="M344 144c-3.92 52.87-44 96-88 96s-84.15-43.12-88-96c-4-55 35-96 88-96s92 42 88 96z"
                                 fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
@@ -146,7 +190,7 @@
                         <span>Hello,</span>
                         <span id="account">My account</span>
                     </div>
-                </a>
+                </li>
             </div>
         </div>
         <div class="links">
