--- a/html/login.html
+++ b/html/login.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="image" href="img/10072.png">
+    <!-- cdn js font Awesome  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- css file -->
     <link rel="stylesheet" href="/css/login.css">
     <!-- js file  -->
@@ -41,7 +43,7 @@
                     <input type="password" required name="password">
                     <label for="">Password</label>
                 </div>
-                <span class="flx-jst">
+                <span class="flx-jst mr-bt">
                     <span class="ft-cont mini-flx">
                         <input type="checkbox" class="chbx">
                         <label for="">Remember me</label>
