comleted work now

--- a/html/abandonment.html
+++ b/html/abandonment.html
@@ -102,6 +102,8 @@
             <button class="btn">complete checkout</button>
         </div>
         <div class="footer flx-evn-cl">
+            <img src="/allimg/abmntimg/leftF.svg" alt="">
+            <img src="/allimg/abmntimg/rightF.svg" alt="">
             <h2>shop for <a class="a-green" href="">fast kart</a></h2>
             <div class="links">
                 <a href="">contact us</a>
