some settings to finished page invoice

--- a/html/invoice.html
+++ b/html/invoice.html
@@ -46,6 +46,84 @@
                 <td>$2797.00</td>
             </tbody>
         </table>
+        <div class="tables">
+            <table class="tbl-mr" >
+                <thead>
+                    <th>No.</th>
+                    <th>item detail</th>
+                    <th>Qty</th>
+                    <th>price</th>
+                    <th>amount</th>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>
+                            <span>Meatigo Premium Goat Curry
+                                </span>
+                                <span>
+                                    Lorem ipsum dolor sit, amet, consectetur adipisicing elit.
+                                </span>
+                        </td>
+                        <td>17</td>
+                        <td>$7.00</td>
+                        <td>$116.02</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>
+                            <span>Meatigo Premium Goat Curry
+                                </span>
+                                <span>
+                                    Lorem ipsum dolor sit, amet, consectetur adipisicing elit.
+                                </span>
+                        </td>
+                        <td>17</td>
+                        <td>$7.00</td>
+                        <td>$116.02</td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>
+                            <span>Meatigo Premium Goat Curry
+                                </span>
+                                <span>
+                                    Lorem ipsum dolor sit, amet, consectetur adipisicing elit.
+                                </span>
+                        </td>
+                        <td>17</td>
+                        <td>$7.00</td>
+                        <td>$116.02</td>
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td>
+                            <span>Meatigo Premium Goat Curry
+                                </span>
+                                <span>
+                                    Lorem ipsum dolor sit, amet, consectetur adipisicing elit.
+                                </span>
+                        </td>
+                        <td>17</td>
+                        <td>$7.00</td>
+                        <td>$116.02</td>
+                    </tr>
+                    <tr>
+                        <td>5</td>
+                        <td>
+                            <span>Meatigo Premium Goat Curry
+                                </span>
+                                <span>
+                                    Lorem ipsum dolor sit, amet, consectetur adipisicing elit.
+                                </span>
+                        </td>
+                        <td>17</td>
+                        <td>$7.00</td>
+                        <td>$116.02</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </section>
 </body>
 </html>
