working about invoice page

--- a/html/invoice.html
+++ b/html/invoice.html
@@ -124,6 +124,10 @@
                 </tbody>
             </table>
         </div>
+        <div class="gr-total inv-flx">
+            <span>GRAND TOTAL</span>
+            <span class="total">$325.00</span>
+        </div>
     </section>
 </body>
 </html>
