complete this page invoice

--- a/html/invoice.html
+++ b/html/invoice.html
@@ -128,6 +128,16 @@
             <span>GRAND TOTAL</span>
             <span class="total">$325.00</span>
         </div>
+        <div class="foot-sign inv-flx">
+            <div class="sz-foot flx-cl">
+                <img src="/allimg/invoiceimg/sign.png" alt="">
+                <span>authorised sign</span>
+            </div>
+            <div class="">
+                <button class="exp-pdf" id="expPDF" >Export As PDF</button>
+                <button class="print" id="print" >Print</button>
+            </div>
+        </div>
     </section>
 </body>
 </html>
