-mcomplete the page invoice

--- a/html/invoice.html
+++ b/html/invoice.html
@@ -46,7 +46,7 @@
                 <td>$2797.00</td>
             </tbody>
         </table>
-        <div class="tables">
+        <div class="tabels">
             <table class="tbl-mr" >
                 <thead>
                     <th>No.</th>
