reset images in this product

--- a/html/abandonment.html
+++ b/html/abandonment.html
@@ -5,14 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>login</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="image" href="img/10072.png">
     <!-- css file -->
+    <link rel="stylesheet" href="/css/primary.css">
     <link rel="stylesheet" href="/css/abandonment.css">
     <!-- js file  -->
     <script defer src="/js/abandonment.js" ></script>
+    <script defer src="/js/primary.js" ></script>
 </head>
 <body class="flx-genr">
     <section class="abandonment sz-img-head">
@@ -25,7 +24,7 @@
                     <a href="">wishlist</a>
                 </li>
             </ul>
-            <img src="/allimg/abmntimg/10043.png" alt="">
+            <img src="/img/abmntimg/10043.png" alt="">
             <ul>
                 <li>
                     <a href="">my cart</a>
@@ -40,7 +39,7 @@
                 <h1 class="h1-mr">still interested?</h1>
             <p>Your cart has items left in it. Check em out now!</p>
             </div>
-            <img class="sz-img" src="/allimg/abmntimg/abandonment-poster.png" alt="">
+            <img class="sz-img" src="/img/abmntimg/abandonment-poster.png" alt="">
         </div>
         <div class="products">
             <div class="head grid br-bt">
@@ -51,7 +50,7 @@
             <div class="all-pr flx-evn-cl">
                 <div class="box grid br-bt">
                     <div class="pr flx-genr sz-img">
-                        <img src="/allimg/abmntimg/10028.png" alt="">
+                        <img src="/img/abmntimg/10028.png" alt="">
                         <span class="nm-p">chips potato</span>
                     </div>
                         <div class="q">
@@ -63,7 +62,7 @@
                 </div>
                 <div class="box grid br-bt">
                     <div class="pr flx-genr sz-img">
-                        <img src="/allimg/abmntimg/10028.png" alt="">
+                        <img src="/img/abmntimg/10028.png" alt="">
                         <span class="nm-p">chips potato</span>
                     </div>
                         <div class="q">
@@ -75,7 +74,7 @@
                 </div>
                 <div class="box grid ">
                     <div class="pr flx-genr sz-img">
-                        <img src="/allimg/abmntimg/10028.png" alt="">
+                        <img src="/img/abmntimg/10028.png" alt="">
                         <span class="nm-p">chips potato</span>
                     </div>
                         <div class="q">
@@ -102,8 +101,8 @@
             <button class="btn">complete checkout</button>
         </div>
         <div class="footer flx-evn-cl">
-            <img src="/allimg/abmntimg/leftF.svg" alt="">
-            <img src="/allimg/abmntimg/rightF.svg" alt="">
+            <img src="/img/abmntimg/leftF.svg" alt="">
+            <img src="/img/abmntimg/rightF.svg" alt="">
             <h2>shop for <a class="a-green" href="">fast kart</a></h2>
             <div class="links">
                 <a href="">contact us</a>
