--- a/html/footer.html
+++ b/html/footer.html
@@ -5,35 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- -- google fonts  -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
         <!-- css file  -->
         <link rel="stylesheet" href="/css/footer.css">
+        <link rel="stylesheet" href="/css/primary.css">
 </head>
 <body>
     <footer class="footer pd-primary" >
         <div class="my-work flx-gap b-dashed-bt">
             <div class="work flx-gap ">
-                <img class="sz-img" src="/imgfooter/10039.svg" alt="">
+                <img class="sz-img" src="/img/imgfooter/10039.svg" alt="">
                 <h5 class="work-h5 b-dashed-rt">Every Fresh Products</h5>
             </div>
             <div class="work flx-gap ">
-                <img class="sz-img" src="/imgfooter/10040.svg" alt="">
+                <img class="sz-img" src="/img/imgfooter/10040.svg" alt="">
                 <h5 class="work-h5 b-dashed-rt">Every Fresh Products</h5>
             </div>
             <div class="work flx-gap ">
-                <img class="sz-img" src="/imgfooter/10041.svg" alt="">
+                <img class="sz-img" src="/img/imgfooter/10041.svg" alt="">
                 <h5 class="work-h5 b-dashed-rt">Every Fresh Products</h5>
             </div>
             <div class="work flx-gap ">
-                <img class="sz-img" src="/imgfooter/10042.svg" alt="">
+                <img class="sz-img" src="/img/imgfooter/10042.svg" alt="">
                 <h5 class="work-h5">Every Fresh Products</h5>
             </div>
         </div>
         <div class="ls flx-gap b-dashed-bt">
             <div class="pr1">
-                <img class="sz-logo" src="/imgfooter/10043.png" alt="">
+                <img class="sz-logo" src="/img/imgfooter/10043.png" alt="">
                 <div class="text mr-tb l-height">
                     We are a friendly bar serving a variety of cocktails, wines and beers. Our bar is a perfect place for a couple.
                 </div>
@@ -131,8 +129,8 @@
                     <span>Download App :
                     </span>
                     <div class="and-ios flx-gap">
-                        <img class="img-download" src="/imgfooter/10044.svg" alt="">
-                        <img class="img-download" src="/imgfooter/10045.svg" alt="">
+                        <img class="img-download" src="/img/imgfooter/10044.svg" alt="">
+                        <img class="img-download" src="/img/imgfooter/10045.svg" alt="">
                     </div>
                 </div>
             </ul>
@@ -140,7 +138,7 @@
         <div class="copyright flx-gap">
             <span>©2022 Fastkart All rights reserved</span>
             <div class="cards">
-                <img src="/imgfooter/cards.png" alt="">
+                <img src="/img/imgfooter/cards.png" alt="">
             </div>
             <div class="social-media flx-gap">
                 <span>Stay connected :</span>
