--- a/html/invoice.html
+++ b/html/invoice.html
@@ -5,19 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>invoice</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="image" href="img/10072.png">
     <!-- css file -->
     <link rel="stylesheet" href="/css/invoice.css">
+    <link rel="stylesheet" href="/css/primary.css">
     <!-- js file  -->
     <script defer src="/js/invoice.js" ></script>
+    <script defer src="/js/primary.js" ></script>
 </head>
 <body>
     <section class="invoice invoice-ruls" >
         <div class="header-inv inv-flx">
-            <img class="sz-img-m" src="/img/10043.png" alt="">
+            <img class="sz-img-m" src="/img/invoiceimg/10043.png" alt="">
             <h3 class="h3-color" >invoice</h3>
         </div>
         <div class="info inv-flx-info">
@@ -130,7 +129,7 @@
         </div>
         <div class="foot-sign inv-flx">
             <div class="sz-foot flx-cl">
-                <img src="/allimg/invoiceimg/sign.png" alt="">
+                <img src="/img/invoiceimg/sign.png" alt="">
                 <span>authorised sign</span>
             </div>
             <div class="">
