--- a/html/signup.html
+++ b/html/signup.html
@@ -5,16 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>login</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="image" href="img/10072.png">
     <!-- cdn js font Awesome  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- css file -->
     <link rel="stylesheet" href="/css/signup.css">
+    <link rel="stylesheet" href="/css/primary.css">
     <!-- js file  -->
     <script defer src="/js/signup.js" ></script>
+    <script defer src="/js/primary.js" ></script>
 </head>
 <body>
     <div class="cur-page flx-jst pd-all">
@@ -28,7 +27,7 @@
         </div>
     </div>
     <section class="login pd-all flx-jst" >
-            <img src="/allimg/loginimg/10000.png" alt="">
+            <img src="/img/loginimg/10000.png" alt="">
         <div class="info flx-jst-colmn">
             <h2>Welcome To Fastkart</h2>
             <h3 id="er" class="h3-co-sz">Create New Account</h3>
@@ -57,11 +56,11 @@
             <span class="span-bg" >OR</span>
             <div class="so-media img-icon flx-jst-colmn-mini flx-jst-cent">
                 <a href="">
-                    <img src="/allimg/loginimg/10002.png" alt="">
+                    <img src="/img/loginimg/10002.png" alt="">
                     <p>Sign Up with Google</p>
                 </a>
                 <a href="" >
-                    <img src="/allimg/loginimg/10003.png" alt="">
+                    <img src="/img/loginimg/10003.png" alt="">
                     <p>Sign Up with Facebook</p>
                 </a>
             </div>
