--- a/html/404.html
+++ b/html/404.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/css/404.css">
     <link rel="stylesheet" href="/css/primary.css">
     <!-- js file  -->
-    <script defer src="/js/login.js" ></script>
+    <script defer src="/js/404.js" ></script>
     <script defer src="/js/primary.js" ></script>
 </head>
 <body>
@@ -25,5 +25,10 @@
             <span>404</span>
         </div>
     </div>
+    <section class="p-404" >
+        <img class="sz-img" src="/img/img404/10001.png" alt="">
+        <p class="p-color" >The page you are looking for could not be found. The link to this address may be outdated or we may have moved the since you last bookmarked it.</p>
+        <button class="btn">back to home screen</button>
+    </section>
 </body>
 </html>
