--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -51,5 +51,38 @@
             </ul>
         </div>
     </section>
+    <section class="what-we-do txt-align">
+        <h3 class="h3-f-c">what we do</h3>
+        <h2 class="h2-line-bt">We Are Trusted By Clients</h2>
+        <!-- This part needs modification by adding animation specific to these elements. -->
+        <div class="wrapper">
+            <div class="boxes sz-icon br-rad gr-all">
+                <div class="box hints-nbr flx-cl">
+                    <h1 >10</h1>
+                    <img src="/img/imgabout/10016.svg" alt="">
+                    <h3>business year</h3>
+                    <p>My goal for this coffee shop is to be able to get a coffee and get on with my day.
+                        It's a Thursday morning and I am rushing between meetings.</p>
+                </div>
+                <div class="box hints-nbr flx-cl">
+                    <h1 >80 k+</h1>
+                    <img src="/img/imgabout/10017.svg" alt="">
+                    <h3>products sales</h3>
+                    <p>Some coffee shops have a seating area, while some just have a spot to order and then
+                        go somewhere else to sit down. The coffee shop that I am going to.</p>
+                </div>
+                <div class="box hints-nbr flx-cl">
+                    <h1 >90%</h1>
+                    <img src="/img/imgabout/10018.svg" alt="">
+                    <h3>happy customers</h3>
+                    <p>A coffee shop is a small business that sells coffee, pastries, and other morning
+                        goods. There are many different types of coffee shops around the world.</p>
+                </div>
+                
+            </div>
+        </div>
+        
+        </div>
+    </section>
 </body>
 </html>
