complete about us page

--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -252,5 +252,32 @@
             </div>
         </div>
     </section>
+    <section class="blogs pd-all txt-align">
+        <h3 class="h3-f-c">Our Blog</h3>
+        <h2 class="h2-line-bt">Our Latest Blog</h2>
+        <div class="boxes sz-ic-memb br-rad gr-all">
+            <div class="blog">
+                <div class="img-blog">
+                    <img src="/img/imgabout/10037.jpg" alt="">
+                </div>
+                <h6>milk brand</h6>
+                <h5>Fresh milk</h5>
+            </div>
+            <div class="blog">
+                <div class="img-blog">
+                    <img src="/img/imgabout/10037.jpg" alt="">
+                </div>
+                <h6>milk brand</h6>
+                <h5>Fresh milk</h5>
+            </div>
+            <div class="blog">
+                <div class="img-blog">
+                    <img src="/img/imgabout/10037.jpg" alt="">
+                </div>
+                <h6>milk brand</h6>
+                <h5>Fresh milk</h5>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
