complete page about us

--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -277,6 +277,13 @@
                 <h6>milk brand</h6>
                 <h5>Fresh milk</h5>
             </div>
+            <div class="blog">
+                <div class="img-blog">
+                    <img src="/img/imgabout/10037.jpg" alt="">
+                </div>
+                <h6>milk brand</h6>
+                <h5>Fresh milk</h5>
+            </div>
         </div>
     </section>
 </body>
