complete more and less button of products

--- a/html/404.html
+++ b/html/404.html
@@ -28,7 +28,7 @@
     <section class="p-404" >
         <img class="sz-img" src="/img/img404/10001.png" alt="">
         <p class="p-color" >The page you are looking for could not be found. The link to this address may be outdated or we may have moved the since you last bookmarked it.</p>
-        <button class="btn">back to home screen</button>
+        <button class="btn404">back to home screen</button>
     </section>
 </body>
 </html>
