--- a/html/contact.html
+++ b/html/contact.html
@@ -6,16 +6,64 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- -- link css file --  -->
-    <link rel="stylesheet" href="/css/cart.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="/css/contact.css">
     <link rel="stylesheet" href="/css/primary.css">
     <!-- -- google fonts  -->
     <link rel="shortcut icon" type="image" href="img/10072.png">
     <!-- script file of js -->
-    <script defer src="/js/cart.js"></script>
+    <script defer src="/js/contact.js"></script>
         <script defer src="/js/primary.js" ></script>
-    <title>cart</title>
+    <title>Contact Us</title>
 </head>
 <body>
-    
+    <div class="cur-page flx-jst pd-all">
+        <h3>contact us</h3>
+        <div class="pg mini-flx">
+            <a href="">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z"/></svg>
+            </a>
+            <svg class="sm-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/></svg>
+            <span>contact us</span>
+        </div>
+    </div>
+    <div class="contact-us">
+        <div class="info">
+            <img src="/img/imgcontact/10001.png" alt="">
+            <div class="get_touch">
+                <h2 class="btm-title" >get in touch</h2>
+                <div class="info-more">
+                    <div class="box flex-jst-start">
+                        <i class="fa-solid fa-phone"></i>
+                        <div class="text flx-jst-colmn">
+                            <span>phone</span>
+                            <span>(+1) 618 190 496</span>
+                        </div>
+                    </div>
+                    <div class="box flex-jst-start">
+                        <i class="fa-solid fa-phone"></i>
+                        <div class="text flx-jst-colmn">
+                            <span>phone</span>
+                            <span>(+1) 618 190 496</span>
+                        </div>
+                    </div>
+                    <div class="box flex-jst-start">
+                        <i class="fa-solid fa-phone"></i>
+                        <div class="text flx-jst-colmn">
+                            <span>phone</span>
+                            <span>(+1) 618 190 496</span>
+                        </div>
+                    </div>
+                    <div class="box flex-jst-start">
+                        <i class="fa-solid fa-phone"></i>
+                        <div class="text flx-jst-colmn">
+                            <span>phone</span>
+                            <span>(+1) 618 190 496</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
