complete contact us page

--- a/html/contact.html
+++ b/html/contact.html
@@ -27,7 +27,7 @@
             <span>contact us</span>
         </div>
     </div>
-    <div class="contact-us">
+    <div class="contact-us pd-primary flx-jst">
         <div class="info">
             <img src="/img/imgcontact/10001.png" alt="">
             <div class="get_touch">
@@ -64,6 +64,39 @@
                 </div>
             </div>
         </div>
+        <form action="">
+            <h1>contact us</h1>
+            <div class="my-inputs">
+                <div class="input-1 flx-jst-colmn-mini">
+                    <label for="">first name</label>
+                    <input type="text" required placeholder="Enter First Name">
+                    <i class="fa-solid fa-user"></i>
+                </div>
+                <div class="input-1 flx-jst-colmn-mini">
+                    <label for="">first name</label>
+                    <input type="text" required placeholder="Enter First Name">
+                    <i class="fa-solid fa-user"></i>
+                </div>
+                <div class="input-1 flx-jst-colmn-mini">
+                    <label for="">first name</label>
+                    <input type="text" required placeholder="Enter First Name">
+                    <i class="fa-solid fa-user"></i>
+                </div>
+                <div class="input-1 flx-jst-colmn-mini">
+                    <label for="">first name</label>
+                    <input type="text" required placeholder="Enter First Name">
+                    <i class="fa-solid fa-user"></i>
+                </div>
+            </div>
+            <div class="text-area">
+            <textarea placeholder="enter your message" name="" id="" cols="30" rows="10"></textarea>
+            <i class="fa-solid fa-user"></i>
+            </div>
+            <button class="btn" >send message</button>
+        </form>
+    </div>
+    <div class="api">
+        API GOOGLE MAP HERE
     </div>
 </body>
 </html>
